# galgebra-fun

./: animation.py  density_operators.md  fun.ipynb  pyproject.toml
