[tool.poetry]
name = "galgebra-fun"
version = "0.1.0"
description = ""
authors = ["Brandon Henke <brandon.henke3@gmail.com>"]
readme = "README.md"
packages = [{include = "galgebra_fun"}]

[tool.poetry.dependencies]
python = "^3.10"
clifford = "^1.4.0"
matplotlib = "^3.7.1"
jupyterlab = "^3.6.3"
mpl-toolkits-clifford = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
